--- a/index.css
+++ b/index.css
@@ -1,11 +1,11 @@
 body {
-  background-color: lightblue;
+  background-color: pink;
   text-align: center;
 }
 
 img{
-    height: 10rem;
+    height: 50rem;
 }
 .daysOfWeek{
-    margin-bottom: 1rem;
+    margin-bottom: 5rem;
 }
